# BCS-FRAPPE

./: pyproject.toml
bcservices/: hooks.py
bcservices/api/: admin.py  auth.py  call.py  chat.py  device.py  google_calendar.py  market.py  me.py  misc.py  notify.py  payment.py  public.py  user.py  utils.py  version.py
bcservices/bcservices/doctype/bc_dennik_hovorov/: bc_dennik_hovorov.json
bcservices/bcservices/doctype/bc_platba/: bc_platba.json
bcservices/bcservices/doctype/bc_token/: bc_token.json
bcservices/bcservices/doctype/bc_transakcia/: bc_transakcia.json
bcservices/bcservices/doctype/dennik_hovorov/: dennik_hovorov.js  dennik_hovorov.json  dennik_hovorov.py  test_dennik_hovorov.py
bcservices/bcservices/doctype/inzerat/: inzerat.js  inzerat.json  inzerat.py  test_inzerat.py
bcservices/bcservices/doctype/klient/: klient.js  klient.json  klient.py  test_klient.py
bcservices/bcservices/doctype/nastavenie/: nastavenie.js  nastavenie.json  nastavenie.py  test_nastavenie.py
bcservices/bcservices/doctype/platba/: platba.js  platba.json  platba.py  test_platba.py
bcservices/bcservices/doctype/poradca/: poradca.js  poradca.json  poradca.py  test_poradca.py
bcservices/bcservices/doctype/poradca_klienta/: poradca_klienta.json  poradca_klienta.py
bcservices/bcservices/doctype/pouzivatel/: pouzivatel.js  pouzivatel.json  pouzivatel.py  test_pouzivatel.py
bcservices/bcservices/doctype/sprava_chatu/: sprava_chatu.js  sprava_chatu.json  sprava_chatu.py  test_sprava_chatu.py
bcservices/utils/: sync_connections.py
(+10 files in other folders)
