[project]
name = "bcservices"
authors = [
    { name = "Focus Hub s.r.o", email = "andrejcernakk@gmail.com" }
]
description = "Custom app for Babylo Client Services"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

# These dependencies WILL be installed by bench (pip)
dependencies = [
    "httpx[http2]>=0.27.0",
    "h2>=4.1.0",
    "stripe>=10.0.0,<11.0.0",
    "PyJWT>=2.9.0,<3.0.0",
    "cryptography>=43.0.0,<44.0.0",
    "requests>=2.32.0,<3.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Development-only dependencies (installed only with bench --dev)
[tool.bench.dev-dependencies]
# sem môžeš pridať dev nástroje ak treba

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "UP", "B", "RUF",
]
ignore = [
    "B017",
    "B018",
    "B023",
    "B904",
    "E101",
    "E402",
    "E501",
    "E741",
    "F401",
    "F403",
    "F405",
    "F722",
    "W191",
    "UP030",
    "UP031",
    "UP032",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
